# CSIGA2

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
.github/: copilot-instructions.md
.github/workflows/: build.yml
build-rel/: CMakeCache.txt  CSIGA2  Makefile  cmake_install.cmake
build-rel/prod/: CSIGA2  run.sh
build-rel/prod/assets/: README.txt
cmake/: pack_prod.cmake
configs/: default.cfg
ignorer/Free ImGui Menu From Ostin/examples/example_linux_sdl3_opengl3/: custom_settings.h  custom_widgets.cpp  custom_widgets.h  example_win32_directx11.vcxproj  example_win32_directx11.vcxproj.filters  imgui_settings.h  main.cpp  main.h
ignorer/Free ImGui Menu From Ostin/examples/example_win32_directx11/: custom_widgets.cpp  custom_widgets.h  main.cpp  main.h
src/: main.cpp
src/app/: app.cpp  app.h  game_data_thread.cpp  game_data_thread.h
src/audio/: mvp_music.cpp  mvp_music.h  virtual_mic.cpp  virtual_mic.h
src/config/: config_manager.cpp  config_manager.h
src/functionalities/aimbot/: aimbot.cpp  aimbot.h
src/functionalities/clickity/: clickity.cpp  clickity.h
src/functionalities/radar/: radar.cpp  radar.h
src/functionalities/visuals/see-trough/: esp.cpp  esp.h  see_trough_demo.cpp  see_trough_demo.h
src/memory/: bones.h  constants.h  data.h  find_offsets.cpp  find_offsets.h  math.h  memory.h  offsets.h  process.cpp  process.h  schema.cpp  schema.h
src/memory/entity/: entity.cpp  entity.h  inferno.h  molotov.h  planted_c4.h  player.cpp  player.h  smoke.h  weapon.cpp  weapon.h  weapon_class.h
src/platform/: input.cpp  input.h  x11_helpers.cpp  x11_helpers.h
src/ui/: assets.cpp  assets.h  menu.cpp  menu.h  ostin_style.cpp  ostin_style.h  state.cpp  state.h  theme.cpp  widgets.cpp  widgets.h
src/video/: video_player.cpp  video_player.h
